--- a/package.json
+++ b/package.json
@@ -5,22 +5,32 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.8.8",
-    "gatsby-image": "^2.1.3",
+    "dotenv": "^10.0.0",
+    "gatsby": "^2.32.13",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-source-filesystem": "^2.0.39",
+    "gatsby-plugin-stripe": "^1.2.4",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-typography": "^3.14.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-source-stripe": "^3.2.2",
     "gatsby-transformer-sharp": "^2.1.19",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.1"
+    "react-typography": "^0.16.20",
+    "styled-components": "^4.4.1",
+    "typography": "^0.16.21"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.0",
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
